--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                 </div>
                 <div class="achievement-item">
                     <div class="achievement-icon">
-                        <i class="fas fa-book"></i>
+                        <i class="fas fa-building"></i>
                     </div>
                     <div class="achievement-content">
                         <h3>Enterprise Security Transformation </h3>
@@ -641,7 +641,7 @@
                 </div>
                 <div class="achievement-item">
                     <div class="achievement-icon">
-                        <i class="fas fa-newspaper"></i>
+                        <i class="fas fa-chalkboard-user"></i>
                     </div>
                     <div class="achievement-content">
                         <h3>Global Cybersecurity Mentor</h3>
@@ -650,7 +650,7 @@
                 </div>
                 <div class="achievement-item">
                     <div class="achievement-icon">
-                        <i class="fas fa-trophy"></i>
+                        <i class="fas fa-lightbulb"></i>
                     </div>
                     <div class="achievement-content">
                         <h3>Cutting-Edge Security Innovation</h3>
@@ -659,7 +659,7 @@
                 </div>
                 <div class="achievement-item">
                     <div class="achievement-icon">
-                        <i class="fas fa-award"></i>
+                        <i class="fas fa-user-tie"></i>
                     </div>
                     <div class="achievement-content">
                         <h3>Multi-Domain Certified Professional</h3>
@@ -690,7 +690,7 @@
                 <div class="trainings-list">
                     <div class="training-item">
                         <div class="training-icon">
-                            <i class="fas fa-certificate"></i>
+                            <i class="fa-solid fa-person-chalkboard"></i>
                         </div>
                         <div class="training-content">
                             <h3>Cybersecurity Instructor – Zybeak Technologies</h3>
@@ -705,7 +705,7 @@
 
                     <div class="training-item">
                         <div class="training-icon">
-                            <i class="fab fa-aws"></i>
+                            <i class="fa-solid fa-person-chalkboard"></i>
                         </div>
                         <div class="training-content">
                             <h3>Network Security Instructor – Sansbound Networks Pvt. Ltd</h3>
@@ -720,7 +720,7 @@
 
                     <div class="training-item">
                         <div class="training-icon">
-                            <i class="fas fa-shield-alt"></i>
+                            <i class="fa-solid fa-person-chalkboard"></i>
                         </div>
                         <div class="training-content">
                             <h3>Corporate & Academic Cybersecurity Workshops</h3>
@@ -854,7 +854,7 @@
                 <div class="footer-social">
                     <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/bharathraaj15" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-medium"></i></a>
+                    <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-hashnode"></i></a>
                     <a href="https://www.credly.com/users/bharathraaj15" target="_blank"><i class="fas fa-award"></i></a>
                     <a href="https://tryhackme.com/p/cyberglitch015" target="_blank"><i class="fas fa-shield-alt"></i></a>
                     <a href="https://linktr.ee/bharathraajpandian" target="_blank"><i class="fas fa-link"></i></a> 
