--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                     <div class="project-body">
                         <p class="project-description">Designed a safe and secure home monitoring system that can prevent accidental fire and shorting of home components.</p>
                         <div class="project-tech">
-                            <span>IOT</span>
+                            <span>IoT</span>
+                            <span>Security</span>
                         </div>
                     </div>
                 </div>
@@ -230,6 +231,7 @@
                         <p class="project-description">Designed and implemented an advanced threat detection system using Splunk and Elastic Stack to monitor real-time network traffic and detect suspicious activities.</p>
                         <div class="project-tech">
                             <span>Security</span>
+                            <span>Threat Detection</span>
                         </div>
                     </div>
                 </div>
@@ -247,7 +249,8 @@
                         <p class="project-description">Created a website so that hospital patient’s reports can easily be uploaded without any middleman.</p>
                         <div class="project-tech">
                             <span>DBMS</span>
-                            <span>IOT</span>
+                            <span>IoT</span>
+                            <span>Healthcare</span>
                         </div>
                     </div>
                 </div>
@@ -266,7 +269,7 @@
                         <div class="project-tech">
                             <span>Python</span>
                             <span>Steganography</span>
-                            <span>PyPI</span>
+                            <span>Network Security</span>
                         </div>
                     </div>
                 </div>
@@ -284,8 +287,8 @@
                         <p class="project-description">Built a custom malware analysis sandbox using IDA Pro, Python, and virtualization tools to analyze malware behavior and reverse engineer malicious code. </p>
                         <div class="project-tech">
                             <span>Python</span>
-                            <span>Steganography</span>
-                            <span>PyPI</span>
+                            <span>Reverse Engineering</span>
+                            <span>Malware</span>
                         </div>
                     </div>
                 </div>
@@ -302,9 +305,9 @@
                     <div class="project-body">
                         <p class="project-description">Developed a toolkit to simulate phishing, pretexting, and baiting attacks in a controlled environment to train employees on recognizing social engineering threats.</p>
                         <div class="project-tech">
-                            <span>PowerShell</span>
+                            <span>Social Engineering</span>
                             <span>Bash</span>
-                            <span>AWS</span>
+                            <span>Powershell</span>
                         </div>
                     </div>
                 </div>
@@ -321,10 +324,9 @@
                     <div class="project-body">
                         <p class="project-description">Built a self-learning SOC assistant that uses LLMs to triage alerts, auto-write reports, correlate logs, and execute automated playbooks for incident response, integrated with SIEM and SOAR platforms.</p>
                         <div class="project-tech">
-                            <span>Terraform</span>
-                            <span>HCL</span>
+                            <span>Automation</span>
+                            <span>SOC</span>
                             <span>PowerShell</span>
-                            <span>Bash</span>
                         </div>
                     </div>
                 </div>
@@ -341,10 +343,10 @@
                     <div class="project-body">
                         <p class="project-description">Developed a threat intel system that breaks malware into “genetic markers” (API calls, encryption patterns, etc.), maps family evolution with graph databases, and enables defenders to predict unseen malware by genetic similarity on a web dashboard.</p>
                         <div class="project-tech">
-                            <span>Terraform</span>
-                            <span>HCL</span>
-                            <span>PowerShell</span>
-                            <span>Bash</span>
+                            <span>Threat Intelligence</span>
+                            <span>Malware Analysis</span>
+                            
+                            
                         </div>
                     </div>
                 </div>
@@ -362,9 +364,9 @@
                     <div class="project-body">
                         <p class="project-description">Created a cyber range simulating full APT attack chains for offense and defense, with automated attack scripts and real-time detection mapped to MITRE ATT&CK, plus a scoring engine to track team response effectiveness.</p>
                         <div class="project-tech">
-                            <span>Python</span>
                             <span>Network Security</span>
-                            <span>Socket Programming</span>
+                            <span>Red - Blue Team</span>
+                            <span>Kill Chain</span>
                         </div>
                     </div>
                 </div>
