--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -750,7 +750,7 @@
             </div>
             <div class="article-container">
                 <div class="article-grid">
-                    <div class="article-card">
+                    <!--<div class="article-card">
                         <div class="article-img">
                             <img src="assets/Pixel_Poisoning.png" alt="Pixel Poisoning: Hacking Generative AI">
                         </div>
@@ -759,18 +759,18 @@
                             <p>A fierce visual defense against generative AI — fight back with poisoned pixels, stealthy watermarks, and adversarial trickery.</p>
                             <a href="https://infosecwriteups.com/%EF%B8%8F-pixel-poisoning-hacking-generative-ai-11f86cb73a30" target="_blank" class="read-more">Read on Medium <i class="fas fa-external-link-alt"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="article-card">
                         <div class="article-img">
-                            <img src="assets/SQL.png" alt="Pixel Poisoning: Hacking Generative AI">
+                            <img src="assets/arp_poisoning.png" alt="Pixel Poisoning: Hacking Generative AI">
                         </div>
                         <div class="article-content">
-                            <h3>SQL Injection Exploitation Made Easy: A Practical Guide to SQLMAP</h3>
-                            <p>Learn how to exploit SQL injection vulnerabilities using SQLMAP, an automated penetration testing tool for database security assessment.</p>
-                            <a href="https://infosecwriteups.com/sql-injection-exploitation-made-easy-a-practical-guide-to-sqlmap-055b39a68a94" target="_blank" class="read-more">Read on Medium <i class="fas fa-external-link-alt"></i></a>
+                            <h3>When Layer 2 Strikes Back — A Real-World ARP Attack Case from the SOC Floor</h3>
+                            <p>A real-world SOC case study uncovering an ARP spoofing attack on Layer 2 networks—revealing how attackers manipulate network traffic inside enterprises.</p>
+                            <a href="https://layer2shadows.hashnode.dev/when-layer-2-strikes-back-a-real-world-arp-attack-case-from-the-soc-floor" target="_blank" class="read-more">Read on Hashnode <i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
-                    <div class="article-card">
+                    <!--<div class="article-card">
                         <div class="article-img">
                             <img src="assets/Wifi.png" alt="Pixel Poisoning: Hacking Generative AI">
                         </div>
@@ -779,10 +779,10 @@
                             <p>A comprehensive guide to hacking and securing Wi-Fi networks using Aircrack-ng, covering practical attack techniques, encryption vulnerabilities, and prevention strategies.</p>
                             <a href="https://infosecwriteups.com/the-art-of-wi-fi-hacking-protection-with-aircrack-ng-71828972cd6e" target="_blank" class="read-more">Read on Medium <i class="fas fa-external-link-alt"></i></a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <div class="article-cta">
-                    <a href="https://medium.com/@info.adityabhatt3010" target="_blank" class="btn primary-btn">View All Posts on Medium</a>
+                    <a href="https://hashnode.com/@cyberglitch" target="_blank" class="btn primary-btn">View All Posts on Hashnode</a>
                 </div>
             </div>
         </div>
@@ -826,7 +826,7 @@
                     </div>
                 </div>
                 <div class="contact-form-container">
-                    <form id="contact-form">
+                    <form id="contact-form" action="https://formspree.io/f/xandnrpb" method="POST">
                         <div class="form-group">
                             <input type="text" id="name" placeholder="Your Name" required>
                         </div>
@@ -883,4 +883,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
