--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="hero-image">
                     <div class="security-graphic">
                         <div class="shield">
-                            <i class="fas fa-shield-alt"></i>
+                            <img src="assets/hacker-activity.png" alt="Hacker activity icon" />
                             <div class="ripple"></div>
                         </div>
                         <div class="binary">01101001 01101110 01100110 01101111 01110011 01100101 01100011</div>
