--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                         <a href="#projects" class="btn secondary-btn">View Projects</a>
                     </div>
                     <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/bharathraaj15" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-hashnode"></i></a> 
-                        <a href="https://www.credly.com/users/bharathraaj15" target="_blank"><i class="fas fa-award"></i></a>
-                        <a href="https://tryhackme.com/p/cyberglitch015" target="_blank"><i class="fas fa-shield-alt"></i></a>
-                        <a href="https://linktr.ee/bharathraajpandian" target="_blank"><i class="fas fa-link"></i></a>
+                        <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/bharathraaj15" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
+                        <a href="https://hashnode.com/@cyberglitch" target="_blank" title="Hashnode Profile"><i class="fab fa-hashnode"></i></a> 
+                        <a href="https://www.credly.com/users/bharathraaj15" target="_blank" title="Credly Profile"><i class="fas fa-award"></i></a>
+                        <a href="https://tryhackme.com/p/cyberglitch015" target="_blank" title="TryHackMe Profile"><i class="fas fa-shield-alt"></i></a>
+                        <a href="https://linktr.ee/bharathraajpandian" target="_blank" title="LinkTree Profile"><i class="fas fa-link"></i></a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -854,12 +854,12 @@
                     <a href="#home"><span>&lt;</span> Cyber_Glitch <span>/&gt;</span></a>
                 </div>
                 <div class="footer-social">
-                    <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://github.com/bharathraaj15" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://hashnode.com/@cyberglitch" target="_blank"><i class="fab fa-hashnode"></i></a>
-                    <a href="https://www.credly.com/users/bharathraaj15" target="_blank"><i class="fas fa-award"></i></a>
-                    <a href="https://tryhackme.com/p/cyberglitch015" target="_blank"><i class="fas fa-shield-alt"></i></a>
-                    <a href="https://linktr.ee/bharathraajpandian" target="_blank"><i class="fas fa-link"></i></a> 
+                    <a href="https://www.linkedin.com/in/bharathraajpandian" target="_blank" title="Linkedin Profile"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/bharathraaj15" target="_blank" title="GitHub Profile"><i class="fab fa-github"></i></a>
+                    <a href="https://hashnode.com/@cyberglitch" target="_blank" title="Hashnode Profile"><i class="fab fa-hashnode"></i></a> 
+                    <a href="https://www.credly.com/users/bharathraaj15" target="_blank" title="Credly Profile"><i class="fas fa-award"></i></a>
+                    <a href="https://tryhackme.com/p/cyberglitch015" target="_blank" title="TryHackMe Profile"><i class="fas fa-shield-alt"></i></a>
+                    <a href="https://linktr.ee/bharathraajpandian" target="_blank" title="LinkTree Profile"><i class="fas fa-link"></i></a>
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
