--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                             <img src="assets/hacker-activity.png" alt="Hacker activity icon" />
                            
                         </div>
-                        <div class="binary">01101001 01101110 01100110 01101111 01110011 01100101 01100011</div>
+                        <div class="binary">01010011 01100001 01111001</div>
+                        <div class="binary1">01001101 01111001</div>
+                        <div class="binary2">01001110 01100001 01101101 01100101</div>
                     </div>
                 </div>
             </div>
