--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <div class="about-text">
                     <p>I see cybersecurity not as a job, but as a responsibility — a duty to stand between chaos and order. Every log, every alert, every anomaly tells a story, and I make sure that story never ends in compromise. As a blue team specialist and Master’s student in Cybersecurity at the University of Houston , I’ve built my path on protecting, detecting, and responding with precision. Armed with certifications like CySA+, PenTest+, CEH, SAL1, and Fortinet Associate, I dive deep into SIEM operations, threat hunting, incident response, and malware analysis. At Unisys Global Services, I didn’t just patch weaknesses — I engineered resilience that cut risk and strengthened enterprise defenses. My projects, from deploying Zero Trust architectures to building malware sandboxes, prove that I don’t just theorize security — I create it, test it, and harden it against real-world threats. And because defense is bigger than one person, I’ve mentored thousands, spreading the awareness that turns employees into the first line of defense. My mission is clear: anticipate the adversary, defend with purpose, and transform resilience into a lasting advantage.</p>
                 </div>
-                <div class="about-picture>
+                <div class="about-picture">
                     <img src="assets/Bharathraaj_Pandian.jpg" alt="Bharathraaj Pandian" />
                 </div>
                 <div class="contact-info">
